<resources>
    <string name="app_name">P1 Memory</string>
    <string name="memoryOption">Memory</string>
    <string name="easy_3x3">Easy (2x2)</string>
    <string name="normal_4x4">Normal (4x4)</string>
    <string name="hard_5x5">Hard (6x6)</string>
    <string name="the_game_of">The Game of</string>
    <string name="final_score">You clicked a total of %d times!</string>
    <string name="restart">Restart Game</string>
    <string name="congratulations">Congratulations!</string>
</resources>